# quelllm-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.claude/memory/: bugs.md  decisions.md  key_facts.md
server/: quelllm_mcp.py
