[project]
name = "quelllm-mcp"
version = "1.0.0"
description = "MCP server exposing quelllm.fr open-weights LLM catalog (250+ models) via tools — list, compare, estimate VRAM, estimate cost API vs self-hosted."
authors = [{ name = "Mohamed Meguedmi", email = "m.meguedmi@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]
keywords = ["mcp", "llm", "open-weights", "catalog", "self-hosted", "cost-estimator", "french"]

[project.urls]
Homepage = "https://quelllm.fr"
Source = "https://github.com/MGM-FALCON/quelllm-mcp"
Issues = "https://github.com/MGM-FALCON/quelllm-mcp/issues"

[project.scripts]
quelllm-mcp = "server.quelllm_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
